--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "displayName": "RakeTaskRegistrar",
   "description": "VS Code extension for registering rake tasks in migrations with CodeLens support",
   "version": "0.0.1",
+  "publisher": "MuhammadSubhan",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Subhan0309/MS-RakeTaskRegistrar.git"
+  },
   "engines": {
     "vscode": "^1.101.0"
   },
@@ -25,13 +30,6 @@
       }
     ]
   },
-  "files": [
-    "extension.js",
-    "scripts/**/*",
-    "package.json",
-    "README.md",
-    "CHANGELOG.md"
-  ],
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
@@ -39,11 +37,14 @@
     "vscode:prepublish": "npm run lint"
   },
   "devDependencies": {
-    "@types/vscode": "^1.101.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
-    "eslint": "^9.25.1",
+    "@types/vscode": "^1.101.0",
     "@vscode/test-cli": "^0.0.11",
-    "@vscode/test-electron": "^2.5.2"
+    "@vscode/test-electron": "^2.5.2",
+    "eslint": "^9.25.1"
+  },
+  "dependencies": {
+    "vsce": "^2.15.0"
   }
 }
